tests/NormalTests/paczka1/small_fuzzy/50728028.err
Error in line 4: AZefMyuor S236 96,3
Error in line 12: AZefMyuor S337 0,0
